fixed alignments

--- a/m1-interactive-react/src/Pages/Scenes/Scenes.scss
+++ b/m1-interactive-react/src/Pages/Scenes/Scenes.scss
@@ -75,9 +75,10 @@
 
 .OptionsPopout {
   display: grid;
-  grid-template-columns: auto auto auto;
-  width: 908px;
+  grid-template-columns: 200px auto 200px;
+  width: 860px;
   height: 80px;
+  margin: 0% auto;
   // background-color: lightgray;
   .OptionBtn {
     width: 176px;
@@ -121,7 +122,7 @@
 
   //   OptionOne
   .OptionOneTextDiv {
-    width: 663px;
+    width: 100%;
     height: 70px;
     background-color: #f2f2f2;
     display: grid;
@@ -142,7 +143,7 @@
   }
   //   OptionTwo
   .OptionTwoTextDiv {
-    width: 663px;
+    width: 100%;
     height: 70px;
     background-color: #f2f2f2;
     display: grid;
